--- a/html51-a/html51-assignment/Content/Site.css
+++ b/html51-a/html51-assignment/Content/Site.css
@@ -1,5 +1,4 @@
-﻿
-body {
+﻿body {
     background: #b6b7bc;
     font-size: .80em;
     font-family: "Helvetica Neue", "Lucida Grande", "Segoe UI", Arial, Helvetica, Verdana, sans-serif;
