--- a/html51/bootstrap/Practic02/Style/style.css
+++ b/html51/bootstrap/Practic02/Style/style.css
@@ -4,3 +4,7 @@
         background-image: url(../img/Quen.jpg);
         background-repeat: no-repeat;
     }
+    
+    .header {
+        position: right;
+    }
